chmvh_website/static/css/modules/_expanded-list.scss
.elist-item {
  padding-bottom: $elist-item-padding-bottom;

  @include element('address') {
    display: flex;

    div {
      flex: 1;
    }

    i {
      color: $color-brand;
      flex: 0;
      padding-right: .5em;
    }

    p {
      margin: 0;
    }
  }

  @include element('email') {
    i {
      color: $color-brand;
    }
  }

  @include element('phone') {
    i {
      color: $color-brand;
    }
  }
}

.expanding-list {
  box-shadow: $expanding-list-shadow;
  margin: $expanding-list-margin;
  padding: $expanding-list-padding;
  width: 100%;

  @include element('title') {
    flex: 1;
    margin: 0;
  }

  @include element('title-bar') {
    align-items: center;
    border-bottom: $expanding-list-title-underline;
    display: flex;
    padding-bottom: $expanding-list-title-padding-bottom;
    transition: border .25s ease-in, padding .25s;
  }

  @include element('toggle') {
    display: none;
    flex: 0;
    font-size: 1.5em;
  }
}

